responsive for all devices done

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -47,7 +47,7 @@ svg {
 }
 
 .main-container {
-  @include breakpoint("mobile") {
+  @include breakpoint("small") {
     padding: 0rem 2rem;
   }
 }
