--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-  padding: 1.6rem 3.5rem;
+  padding: 1.7rem 3.5rem;
   border-radius: 0.2rem;
   font-size: 1.8rem;
   font-weight: 500;
@@ -9,37 +9,37 @@
   transition: all 300ms ease;
 
   &-outline {
-    border: 1px solid $white;
+    border: 0.1rem solid $white;
 
     &:focus,
     &:hover {
-      border: 1px solid $dark-navyblue;
+      border: 0.1rem solid $dark-navyblue;
       background: $white;
       color: $dark-blue;
     }
   }
 
   &-yellow {
-    border: 1px solid $yellow;
+    border: 0.1rem solid $yellow;
     background: $yellow;
     color: $dark-blue;
 
     &:focus,
     &:hover {
-      border: 1px solid $yellow;
+      border: 0.1rem solid $yellow;
       background: $dark-blue;
       color: $yellow;
     }
   }
 
   &-white {
-    border: 1px solid $white;
+    border: 0.1rem solid $white;
     background: $white;
     color: $footer-navyblue;
 
     &:focus,
     &:hover {
-      border: 1px solid $white;
+      border: 0.1rem solid $white;
       background: $footer-navyblue;
       color: $white;
     }
@@ -49,3 +49,5 @@
     background: $dark-navyblue;
   }
 }
+
+
