--- a/assets/scss/components/_eligibility-section.scss
+++ b/assets/scss/components/_eligibility-section.scss
@@ -3,7 +3,7 @@
   .eligibility-content {
     padding: 7.4rem 3.25rem;
 
-    @include breakpoint("iPad") {
+    @include breakpoint("medium") {
       padding: 6rem 4rem;
     }
 
@@ -17,7 +17,7 @@
         object-fit: cover;
       }
 
-      @include breakpoint("iPad") {
+      @include breakpoint("medium") {
         margin-top: 5rem;
         width: 100%;
       }
@@ -27,7 +27,7 @@
       margin-left: 6.5rem;
       width: 50%;
 
-      @include breakpoint("mobile") {
+      @include breakpoint("small") {
         width: 100%;
         margin-left: 0;
         margin-bottom: 2rem;
