--- a/assets/scss/components/_faq-section.scss
+++ b/assets/scss/components/_faq-section.scss
@@ -1,9 +1,25 @@
 .faq-wrapper {
   padding: 5rem 0.95rem 10rem 0.95rem;
 
+
+  @include breakpoint("small") {
+   justify-content: center;
+
+  }
+
+  @include breakpoint("xtrasmall") {
+   justify-content: center;
+  }
+
+
   .heading-style {
     padding: 5rem 1.5rem 25.5rem 1.5rem;
     flex-direction: column;
+
+    @include breakpoint("medium") {
+      padding-block: 1rem ;
+   
+     }
 
     .heading {
       max-width: 11.1rem;
@@ -17,8 +33,8 @@
       max-width: 37.1rem;
     }
     p {
-      margin-top: 0.1rem;
-      margin-bottom: 0.2rem;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
     }
   }
 
