--- a/assets/scss/components/_finance-type.scss
+++ b/assets/scss/components/_finance-type.scss
@@ -3,7 +3,7 @@
   .yellow-bg-img {
     position: absolute;
     right: 0;
-    top: -5rem;
+    top: -11rem;
     z-index: -1;
     max-width: 80%;
   }
@@ -11,48 +11,50 @@
 
 .finance-section {
   position: relative;
-  padding: 3rem 2.3rem 0 3.4rem;
+  padding: 0 2.85rem;
   z-index: 0;
-  padding-top: 5rem;
+
+
 
   .finance_info {
-    .finance_content {
-      margin-top: 1rem;
-      margin-bottom: 11rem;
-      max-width: 660px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: flex-end;
 
-      @include breakpoint("mobile") {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin-top: 2.5rem;
-        padding: 0 2.5rem;
-      }
+   
 
+    .finance_content {
+     
       .heading {
         padding: 0.4rem 2.5rem;
-
         border-radius: 0.4rem;
         background: $light-white;
         max-width: 16.9rem;
-        margin-top: 14rem;
         margin-bottom: 2rem;
       }
 
-      h5 {
-        max-width: 45.7rem;
+      h5{
+        max-width: 45.7rem
       }
+   
 
       > p {
-        margin: 1rem 9.3rem 2rem 0rem;
-        max-width: 49.1rem;
+         max-width: 49.1rem;
+        margin: 1rem 0 2rem 0;
       }
+      @include breakpoint("small") {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    
+      }
+
+     .Finance-type__listing{
+      margin-bottom: 7.2rem
+     
+     }
 
       .tick-wrapper {
         display: flex;
@@ -60,9 +62,11 @@
         margin-bottom: 1.5rem;
 
         p {
-          margin-left: 1rem;
+          font-family: $jakarta-medium;
+          margin-left: 1.8rem;
+          line-height: 2.9rem;
         }
-      }
+      }   
     }
   }
 }
