--- a/assets/scss/components/_join-us.scss
+++ b/assets/scss/components/_join-us.scss
@@ -34,6 +34,11 @@
     align-items: center;
     margin-bottom: 4.3rem;
 
+    @include breakpoint("small") {
+      flex-direction: column;
+      gap: 2rem;
+    }
+
     input {
       width: 37.5rem;
       padding: 1.6rem 2.3rem;
