--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -1,27 +1,4 @@
-.footer-man {
-  background-color: $footer-navyblue;
-
-  .get-started {
-    padding: 0 3.9rem;
-    position: relative;
-
-    .get-started-img {
-      position: absolute;
-      top: -12rem;
-    }
-
-    .get-started-content {
-      padding: 6.85rem 1.5rem 9.34rem 1.5rem;
-
-      h2 {
-        color: $white;
-        margin-bottom: 4.6rem;
-      }
-    }
-  }
-}
-
-.footer-wrapper {
+.footer-section {
   padding: 0 4.3rem;
   background-color: $footer-navyblue;
 
@@ -29,6 +6,14 @@
     padding: 7.5rem 16.6rem;
     background-color: $white;
     border-radius: 2rem;
+
+    @include breakpoint("medium") {
+      padding: 1.5rem;
+    }
+
+    @include breakpoint("small") {
+      padding: 2rem
+    }
 
     .footer-top-grid {
       max-width: 102.2rem;
@@ -45,15 +30,18 @@
     }
 
     .gmail_contact {
-      span {
-        height: 4rem;
-        width: 4rem;
-        margin-right: 1.5rem;
-      }
+      // span {
+      //   height: 4rem;
+      //   width: 4rem;
+      // }
     }
     .part_one {
       margin-right: 5.05rem;
       padding-bottom: 5.7rem;
+
+      @include breakpoint("small") {
+        margin-right: 0rem;
+      }
 
       img {
         max-width: 14.6rem;
@@ -66,7 +54,6 @@
       .social-logo {
         list-style-type: none;
         li {
-          margin-right: 1.3rem;
           a {
             img {
               max-width: 3.6rem;
@@ -176,3 +163,5 @@
     }
   }
 }
+
+
